--- a/06-advanced-redux/package.json
+++ b/06-advanced-redux/package.json
@@ -18,6 +18,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/reselect": "^2.2.0",
     "autoprefixer": "^9",
+    "eslint": "^7.25.0",
     "http-proxy-middleware": "^1.1.0",
     "postcss": "^7",
     "ramda": "^0.27.1",
@@ -37,7 +38,8 @@
     "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/eslint . --ext .ts,.js,.tsx"
   },
   "eslintConfig": {
     "extends": [
