--- a/course-project/package.json
+++ b/course-project/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "course-project",
+  "name": "snake-game",
+  "description": "Snake game created as course project for Evo TS Bootcamp",
+  "author": "Kristine Galuscaka",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,13 +23,7 @@
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "mobx": "^6.3.2",
-    "mobx-react-lite": "^3.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
